<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_blue" />

        <TextView
            style="@style/H"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/selamat_datang"
            android:textColor="@color/netral_800" />

        <TextView
            style="@style/P2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUsername"
            style="@style/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/masukkan_username"
            android:padding="10dp" />

        <TextView
            style="@style/P2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/netral_300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_password"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLupaPaswd"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_ripple_blue"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/lupa_password"
            android:textColor="@color/primary_500" />


        <Button
            android:id="@+id/btMasuk"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/thebutt_blue"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btDaftarBaru"
            style="@style/P1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/thebutt_blue_border"
            android:text="@string/daftar_baru"
            android:textAllCaps="false"
            android:textColor="@color/primary_500" />
    </LinearLayout>


</RelativeLayout>