<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lbs_tambah_kategori"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@color/black_50" />

    <TextView
        android:id="@+id/tv_lainnya"
        style="@style/P3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tambah_kontak"
        android:textColor="@color/netral_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:orientation="vertical">

        <TextView
            style="@style/P2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_nama_kontak"
            android:textColor="@color/netral_800" />

        <EditText
            android:id="@+id/etNamaKontak"
            style="@style/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/contoh_ari"
            android:inputType="textCapWords"
            android:padding="10dp" />

        <Button
            android:id="@+id/bt_tambah"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/thebutt_blue"
            android:text="@string/tambah"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>