<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UtangUbahActivity">

    <android.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            app:tint="@color/netral_100" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ubah_utang"
            android:textColor="@color/netral_100" />


    </android.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/P2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/jumlah"
                android:textColor="@color/netral_800" />

            <EditText
                android:id="@+id/et_jumlah"
                style="@style/BodyPoppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/login_text_field"
                android:hint="@string/masukkan_jumlah"
                android:inputType="numberDecimal"
                android:padding="@dimen/_10sdp" />

            <LinearLayout
                android:id="@+id/line_piutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/P2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="Dipinjamkan Ke"
                    android:textColor="@color/netral_800" />

                <AutoCompleteTextView
                    android:id="@+id/et_dipinjamkan_ke"
                    style="@style/Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/login_text_field"
                    android:ems="10"
                    android:hint="@string/pilih_nama"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_utang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/P2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="Dipinjamkan Oleh"
                    android:textColor="@color/netral_800" />

                <AutoCompleteTextView
                    android:id="@+id/et_dipinjamkan_oleh"
                    style="@style/Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/login_text_field"
                    android:ems="10"
                    android:hint="@string/ketikan_nama"
                    android:inputType="textCapWords"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp" />

            </LinearLayout>

            <TextView
                style="@style/P2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/kontak_terbaru"
                android:textColor="@color/netral_400" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKontakTerbaru"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:itemCount="3"
                tools:listitem="@layout/item_kontak_terbaru" />


            <TextView
                style="@style/P2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tanggal_transaksi"
                android:textColor="@color/netral_800" />

            <EditText
                android:id="@+id/et_tanggal"
                style="@style/BodyPoppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/login_text_field"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:editable="false"
                android:focusable="true"
                android:hint="@string/masukkan_tanggal_transaksi"
                android:padding="@dimen/_10sdp" />

            <TextView
                style="@style/P2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/catatan"
                android:textColor="@color/netral_800" />

            <EditText
                android:id="@+id/et_catatan"
                style="@style/BodyPoppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/login_text_field"
                android:hint="@string/masukkan_catatan"
                android:padding="@dimen/_10sdp" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="20dp">

        <Button
            android:id="@+id/bt_ubah"
            style="@style/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thebutt_blue"
            android:padding="@dimen/_10sdp"
            android:text="@string/ubah"
            android:textAllCaps="false"
            android:textColor="@color/netral_100" />

    </LinearLayout>


</RelativeLayout>